Name:                spike
Version:             0.1
Synopsis:            Experimental web browser
License:             BSD3
License-file:        LICENSE
Author:              Krzysztof Skrzętnicki
Maintainer:          gtener@gmail.com
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable spike
  Main-is:           spike.hs
  Hs-source-dirs:    src
  Build-depends:     webkit == 0.12.*, containers, gtk, base, mtl > 2
  Ghc-options:       -rtsopts

Executable spike2
  Main-is:           spike2.hs
  Other-modules:     Utils,  VisualBrowseTree, Datatypes, Graphs, CFunctions
  Hs-source-dirs:    src
  Build-depends:     webkit == 0.12.*, containers, gtk, base, stm, mtl > 2, rosezipper, process, directory, filepath
  Ghc-options:       -rtsopts
  C-sources: cbits/cbits.c
  pkgconfig-depends: libsoup-gnome-2.4
 -- , webkitgtk-3.0